# archive

./: .gitattributes  .gitmodules  README.md
.github/workflows/: pr.yml
archive/: 20200122-HTML-thisismywebsiteiguess.html  20200122-HTMLCSS-fancywebsite.html  20200125-sumdiv.py  20200129-to-the-powers-generator.py  20200202-pycalc-2.0.py
archive/20191207-UninstallWindows v1.0/: UninstallWindows v1.0.sln
archive/20191211-DownloadButton/: DownloadButton.sln
archive/20200114-pythontest1/: log.txt  pythontest1-checkpoint.ipynb  pythontest1.ipynb
archive/20200202-simple-bouncing-ball-animation/: index.html  style.css
archive/20200205-portfolio-contest-entry/: index.html  script.js  style.css
archive/20200211-flip-a-coin/: index.html  script.js  style.css
archive/20200211-surfing-the-internet/: index.html  script.js  style.css
archive/20200222-rock-paper-scissors/: index.html  script.js  style.css
archive/20200223-ko-challenge-1/: index.html  script.js  style.css
archive/20200229-math-quiz/: index.html  script.js  style.css
archive/20200407-username601/: README.md  bot.py  config.ini  decorators.py  requirements.txt
archive/20200528-web-calculator/: index.html  script.js  style.css
archive/20200530-geomepydash/: README.md  documentation.json  index.html  license.txt  parser.js  setup.py
archive/20200606-piegame/: README.md  game.py
archive/20200922-TerminalPad/: TerminalPad.sln
archive/20211009-cprintf/: README.md  (+2 more)
archive/20240112-npplug/npplug/: Cargo.toml
archive/20240112-npplug/npplug/src/: __private.rs  debug.rs  error.rs  lib.rs  util.rs
archive/20240815-jumpcutter/: .gitignore  CMakeLists.txt  jumpcutter.c  jumpcutter.h  lifecycle.c  lifecycle.h  silence.c  silence.h  util.c  util.h
assets/: 20220120-username601-reviews.json
database/: 20200514-stats-username601.shard0.csv  20200514-stats-username601.shard1.csv  20200514-stats-username601.shard2.csv  20200514-username601.config.json  20200514-username601.dashboard.json  20200514-username601.economy.json
(+166 files in other folders)
