[package]
name = "npplug"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1"
libc = { version = "0.2", optional = true }

[dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging"
]

[features]
debug = [
  "windows-sys/Win32_Security",
  "windows-sys/Win32_System_Console",
  "windows-sys/Win32_Storage_FileSystem"
]